plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.1.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

subprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    gradle.projectsEvaluated {
        tasks.withType(JavaCompile).tap {
            configureEach {
                options.compilerArgs << "-Werror"
            }
        }
    }

    dependencies {
        implementation          libs.annotation.api
        implementation          libs.apache.commons
        implementation          libs.log4j.api
        implementation          libs.log4j.core
        runtimeOnly             libs.log4j.slf4j.impl
        compileOnly             libs.lombok
        testCompileOnly         libs.lombok
        annotationProcessor     libs.lombok
        testAnnotationProcessor libs.lombok
        testImplementation      libs.mockito.core
        testImplementation      libs.testng
        implementation 'org.flywaydb:flyway-database-postgresql:11.13.2'
        implementation 'org.postgresql:postgresql:42.7.8'
        implementation 'org.slf4j:slf4j-api:2.0.17'
    }

    tasks.withType(Test).configureEach {
        useTestNG()
    }

}